<resources>
    <string name="app_name">不用记</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="safe_folder">安全文件夹</string>
    <string name="password_generator">密码生成器</string>
    <string name="recommend">推荐</string>
    <string name="get_premium_version">获取高级版本</string>
    <string name="evaluate">评价</string>
    <string name="setting">设置</string>
    <string name="exit">安全退出</string>
    <string name="feedback">反馈</string>
    <string name="generate_password">生成密码</string>
    <string name="letter">字母</string>
    <string name="number">数字</string>
    <string name="symbol">符号</string>
    <string name="length">长度</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="password_strength">强度: 70%</string>
    <string name="copy_success">复制成功</string>
    <string name="hint_input_web_site">请输入网址</string>
    <string name="hint_select_web_site_from_following">或从下面选择一个网址</string>
    <string name="next_setup">下一项</string>
    <string name="add_password">添加密码</string>
    <string name="account">账号</string>
    <string name="web_site_name">网站名</string>
    <string name="web_site_category">类型</string>
    <string name="remarks">备注</string>
    <string name="login">登录</string>
    <string name="bankcard">卡务</string>
    <string name="note">笔记</string>
    <string name="certificate">证件</string>
    <string-array name="id_string_webSiteArray">
        <item>baidu.com</item>
        <item>w.qq.com</item>
        <item>tmall.com</item>
        <item>163.com</item>
        <item>wx.qq.com</item>
        <item>weibo.com</item>
        <item>bilibili.com</item>
        <item>taobao.com</item>
        <item>tudou.com</item>
        <item>youku.com</item>
        <item>zhihu.com</item>
        <item>yunpan.360.cn</item>
        <item>douban.com</item>
        <item>github.com</item>
        <item>jd.com</item>
    </string-array>
    <string-array name="id_string_website_name">
        <item>百度</item>
        <item>QQ</item>
        <item>天猫</item>
        <item>网易</item>
        <item>微信</item>
        <item>新浪微博</item>
        <item>哔哩哔哩</item>
        <item>淘宝</item>
        <item>土豆</item>
        <item>优酷</item>
        <item>知乎</item>
        <item>360云盘</item>
        <item>豆瓣</item>
        <item>github</item>
        <item>京东</item>
    </string-array>
    <string-array name="id_string_storage_type_name">
        <item>银行卡</item>
        <item>密码</item>
        <item>信用卡</item>
        <item>数据库</item>
        <item>驾驶证</item>
        <item>身份证</item>
        <item>网站</item>
        <item>邮箱</item>
        <item>会员卡</item>
        <item>护照</item>
        <item>安全笔记</item>
        <item>服务器</item>
        <item>社会保险</item>
        <item>软件执照</item>
        <item>wifi信息</item>
    </string-array>
    <string name="bank_card">银行卡</string>
    <string name="password">密码</string>
    <string name="credit_card">信用卡</string>
    <string name="database">数据库</string>
    <string name="driver_license">驾驶证</string>
    <string name="id_card">身份证</string>
    <string name="id_web_site">网站</string>
    <string name="mail">邮箱</string>
    <string name="member_card">会员卡</string>
    <string name="passport">护照</string>
    <string name="safe_note">安全笔记</string>
    <string name="server">服务器</string>
    <string name="security">社会保险</string>
    <string name="soft_ware_license">软件执照</string>
    <string name="wifi_infor">wifi信息</string>
    <string name="bank_name">银行名称</string>
    <string name="account_name">账户名称</string>
    <string name="bank_account">银行账户</string>
    <string name="account_type">账户类型</string>
    <string name="rooting_number">汇款线路号</string>
    <string name="bank_number">银行卡号</string>
    <string name="swift_code">swift 代码</string>
    <string name="internalnational_number">国际银行编号</string>
    <string name="pin_number">pin 码</string>
    <string name="phone_number">手机号</string>
    <string name="address">地址</string>
    <string name="title">标题</string>
    <string name="bicOrSwift">bic/swift</string>
    <string name="iban">国际银行账户</string>
    <string-array name="id_string_bank_card_type">
        <item>储蓄</item>
        <item>货币市场</item>
        <item>信用额度</item>
        <item>支票</item>
        <item>ATM</item>
        <item>其他</item>
    </string-array>
    <string name="wifi">wifi</string>
    <string name="type">类型 |</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_add_type">选择添加类型</string>
    <string name="auto_login_introduce">一键登录你的APP\n</string>
    <string name="open_stting">打开设置</string>
    <string name="auto_login_service_label">auto login services </string>
    <string name="open_auto_login_permission_infor">打开开关，将允许“不用记”登陆您的APP,下一步你将会被询问“不用记”是否允许使用这些权限，点击确认享受便捷！</string>
    <string name="no_password_tip">还没有密码项，添加一个呗！</string>
    <string name="individual">个</string>
    <string name="credit_card_title">信用卡标题</string>
    <string name="owner_name">拥有者姓名</string>
    <string name="singleViewHolder">single</string>
    <string name="viewholder">viewholder</string>
    <string name="content">内容</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="toolbar_type">类别</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="born_date">出生日期</string>
    <string name="id_card_number">身份证号</string>
    <string name="issuin_authority">签发机关</string>
    <string name="start_term_date">生效日期</string>
    <string name="end_term_date">终止日期</string>
    <string name="country">国家</string>
    <string name="account_holder">账户持有人</string>
    <string name="mail_address_url">邮箱域名</string>
    <string name="wifi_name">wifi名称</string>
    <string name="back_manage_address">后台管理地址</string>
    <string name="back_admin_password">后台管理员密码</string>
    <string name="back_admin_account">管理员账户</string>
    <string name="internet_providr_account">网络提供商账户</string>
    <string name="intername_provider_password">网络提供商密码</string>
    <string name="wifi_password">wifi密码</string>
    <string name="credit_number">信用卡号</string>
    <string name="credit_holder_name">信用卡持有人</string>
    <string name="security_number">安全码</string>
    <string name="credit_card_name">信用卡名</string>
    <string name="close">关闭</string>
    <string name="next_step">下一步</string>
    <string name="register">注册</string>
    <string name="comment">评价</string>
    <string name="help">帮助</string>
    <string name="reset_password">重置密码</string>
    <string name="forbiden_screenshot">禁止截图</string>
    <string name="protect_password">保护密码</string>
    <string name="sync">同步</string>
    <string name="version_info">版本信息</string>
    <string name="auto_fill_services">自动填充设置</string>
    <string name="forbiden_screenshot_tip">禁止其他程序截取程序应用界面</string>
    <string name="over_wrong_password_tip">输错密码超过5次自动清除用户数据</string>
    <string name="comment_tip">前往应用商店品评价</string>
    <string name="about">关于</string>
    <string name="contact_us">联系我们</string>
    <string name="email">邮箱</string>
    <string name="contact_email_address">邮箱：norember_speeder@163.com</string>
    <string name="feedback_content">将您在使用中的意见发送给我们,或者详细描述您的问题。</string>
    <string name="contact_way">便于我们联系您</string>
    <string name="submit">提交</string>
    <string name="save_success">保存成功</string>
    <string name="social_insurance">社会保险</string>
    <string name="category">类别</string>
    <string name="title_cant_empty">标题不能为空</string>
    <string name="account_cant_empty">账户不能为空</string>
    <string name="is_save_change">保存做出的修改吗？</string>
    <string name="save_change">保存更改</string>
    <string name="choose_type">选择类型</string>
    <string name="bank_account_name_cant_empty">银行账户不能为空</string>
    <string name="delete">删除</string>
    <string name="is_delete">确认删除吗？</string>
    <string name="web_site_url">网址</string>
    <string name="web_site">网站</string>
    <string name="import_from_wechat">从微信导入数据</string>
    <string name="impory_from_qq">从qq导入数据</string>
    <string name="choose_import_path">选择导入路径</string>
    <string name="choose_from_local_path">选择文件导入目录</string>
    <string name="no_content_tip">暂时还没有文件添加右上角的选择添加</string>
    <string name="encipher_file">加密文件</string>
    <string name="encipher_file_ing">正在加密文件</string>
    <string name="encipher_success">加密成功</string>
    <string name="decipher_file">解密文件</string>
    <string name="decipher_file_ing">解密文件中</string>
    <string name="decipher_failure">解密失败</string>
    <string name="input_current_main_password">请输入当前主密码</string>
    <string name="please_input_again_password">请再次输入主密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="chang_password_tip">更改密码之前需要先验证它</string>
    <string name="input_password_tip">设定你的新密码</string>
    <string name="change_password_succeed">修改密码成功</string>
    <string name="password_cant_empty">密码不能为空</string>
    <string name="twice_password_not_same">两次密码不一致</string>
    <string name="change_password">修改密码</string>
    <string name="login_ok">登陆成功 </string>
    <string name="clear_pin">清除密码</string>
    <string name="loading">正在登陆</string>
    <string name="please_input_password">请输入密码</string>
    <string name="input_main_password">请输入主密码</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="before_use_set_password">在使用之前输入用户密码</string>
    <string name="set_login_password">设定登录的主密码</string>
    <string name="sure_your_main_password">确认你的主密码</string>
    <string name="password_must_max_six">密码长度必须大于六位</string>
    <string name="password_not_same">两次密码不一致</string>
    <string name="thanks_your_feedback">感谢你的反馈,我们回会努力改进！</string>
    <string name="feed_back_content_cant_null">反馈内容不能为空</string>
    <string name="no_contect_way">没有联系方式</string>
    <string name="os_version">android 5.0</string>
    <string name="try_few_minute_later">过一会试试!</string>
    <string name="device_is_locked">设备已锁定</string>
    <string name="deleteing_data">正在删除数据</string>
    <string name="bind_device">绑定设备</string>
    <string name="scan_qr_on_the_computer">扫描电脑上的二维码，进行设备绑定</string>
    <string name="bind_success">绑定设备成功</string>
    <string name="no_title">没有标题</string>
    <string name="bank_card_nubmer_cant_empty">银行卡号不能为空</string>
    <string name="bank_card_number_empty">卡号为空不能删除</string>
    <string name="credit_card_owner_cant_empty">信用卡持有人不能为空</string>
    <string name="credit_card_nubmer_cant_empty">信用卡号不能为空</string>
    <string name="id_card_name_cant_empty">姓名不能为空</string>
    <string name="id_card_number_cant_empty">身份证号不能为空</string>
    <string name="wifi_name_cant_empty">wifi信号不能为空</string>
    <string name="wifi_password_cant_empty">wifi密码不能为空</string>
    <string name="password_not_correct">密码不正确</string>
    <string name="very_nice_password_manager">非常不错的密码管理软件,再也不用记住密码了</string>
    <string name="temp_no_login_infor">暂时还没有登录账户，去添加几个吧</string>
    <string name="app_store_search_norember">在应用市场搜索“不用记”，下载我吧</string>
    <string name="permission_denied">权限被否决，你将无法使用完整的功能</string>
    <string name="open_auto_login_services">打开自动登录服务</string>
    <string name="allow_popup_window_permission">允许弹出快捷登陆，使登陆不在繁琐</string>
    <string name="denied_you_will_not_use_complete_feature">拒绝你将无法使用完整功能</string>
    <string name="you_have_finished">你已完成</string>
    <string name="authorize">授权</string>
    <string name="setting_finsh">设置完成</string>
    <string name="you_will_not_allow_use_fingerprint">如果拒绝你将不允许使用指纹识别</string>
    <string name="finger_tip">6.0系统已以上安卓系统才可使用</string>
    <string name="open_finger_print_unlock">打开指纹解锁</string>
    <string name="now_you_cant_use_fingerprint">现在你不能使用指纹解锁，请使用密码解锁</string>
    <string name="is_last_version">已是最新版本</string>
    <string name="check_update">检查更新</string>
    <string name="bind_device_success">绑定设备成功</string>
</resources>