<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/id_password_generator"
            android:icon="@mipmap/ic_password_generator"
            android:title="@string/password_generator" />
        <item
            android:id="@+id/id_recommend"
            android:icon="@mipmap/ic_recommend"
            android:title="@string/recommend" />

        <item
            android:id="@+id/id_feedback"
            android:icon="@mipmap/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/id_seeting"
            android:icon="@mipmap/ic_setting"
            android:title="@string/setting" />

        <item
            android:id="@+id/id_exit"
            android:icon="@mipmap/ic_exit"
            android:title="@string/exit" />

    </group>


</menu>
