<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/id_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.35"
        android:gravity="start|clip_horizontal"
        android:hint="@string/feedback_content"

        android:padding="10dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/id_feedback_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/contact_way"
        android:singleLine="true" />


    <Button

        android:id="@+id/id_feedback_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="60dp"
        android:background="@drawable/corner_button"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>