<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <TextView
        android:id="@+id/id_sure_main_password_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_activity_first_setpassword_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/before_use_set_password"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/id_sure_main_password_tip"
        android:layout_marginTop="91dp">


    </ScrollView>

    <ImageView
        android:id="@+id/id_activity_first_setpassword_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/id_sure_main_password_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/corner_button"
        android:enabled="false"
        android:text="@string/setting_finsh"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/id_sure_main_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/id_sure_main_password_tip"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/please_input_again_password"
        android:inputType="textPassword" />
</RelativeLayout>