<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:minHeight="180dp"
    android:minWidth="150dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/generate_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"

                android:text="@string/letter" />

            <com.rey.material.widget.Switch
                android:id="@+id/id_letter_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="32dp"
                app:sw_trackColor="@android:color/holo_blue_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"

                android:text="@string/number" />

            <com.rey.material.widget.Switch
                android:id="@+id/id_number_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="32dp"
                app:sw_trackColor="@android:color/holo_blue_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"

                android:text="@string/symbol" />

            <com.rey.material.widget.Switch
                android:id="@+id/id_symbol_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="32dp"
                app:sw_trackColor="@android:color/holo_blue_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/id_length_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="32dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/length" />

            <com.rey.material.widget.Slider
                android:id="@+id/id_length_slider"
                style="@style/Material.Widget.Slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/id_length_tv"
                android:layout_marginTop="22dp"

                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:sl_discreteMode="true"
                app:sl_maxValue="30"
                app:sl_minValue="0"
                app:sl_primaryColor="@android:color/holo_blue_light"
                app:sl_thumbFocusRadius="@dimen/activity_horizontal_margin"
                app:sl_trackSize="5dp"
                app:sl_travelAnimDuration="@integer/DRAWERTYPE_IMAGE"
                app:sl_value="15" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark">

            <EditText
                android:id="@+id/id_password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@null"
                android:maxWidth="170dp"
                android:singleLine="true"
                android:text="fasfsadfsafsaffsfasdfasdfasdfsaffsadfsdfsadfaasafsadfsaf"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_password_strength_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/id_password_et"
                android:layout_alignStart="@+id/id_password_et"
                android:layout_below="@id/id_password_et"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/password_strength"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <com.rey.material.widget.ImageButton
                android:id="@+id/id_password_copy_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:background="@drawable/copy_btn_bg"
                android:src="@mipmap/ic_copy_small" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/id_password_cancel_btn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/sure"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_password_sure_btn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/cancel"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
